# internal/delivery/api/models/common.go
@@ -14,3 +14,7 @@ type PaginationResponse struct {
 type ErrorResponse struct {
 	Error string `json:"error"`
 }
+
+type SuccessResponse struct {
+	Success bool `json:"success"`
+}
