# internal/delivery/api/router.go
@@ -129,6 +129,11 @@ func NewRouter(opts *delivery.Options) *gin.Engine {
 			protected.PUT("/debts/:id", h.UpdateDebt)
 			protected.POST("/debts/:id/pay", h.PayDebt)
 			protected.POST("/debts/:id/cancel", h.CancelDebt)
+
+			// Anon Broadcast routes
+			protected.GET("/anons", h.GetAnons)
+			protected.POST("/anons", h.CreateAnons)
+			protected.POST("/anons/:id/broadcast", h.BroadcastAnons)
 		}
 	}
 
